# log-system

./: .gitignore  CMakeLists.txt  README.md  level.hpp  message.hpp  test  test.cpp  test_log_sink.cpp  util.hpp
.trae/rules/: rules.md
include/: log_buffer.h  log_event.h  log_file.h  log_formatter.h  log_level.h  log_logger.h  log_sink.h  utils.h
src/: log_buffer.cpp  log_event.cpp  log_file.cpp  log_formatter.cpp  log_level.cpp  log_logger.cpp  log_sink.cpp  utils.cpp
tests/: test_console_sink.cpp  test_file_sink.cpp  test_log_event.cpp  test_log_file.cpp  test_log_formatter.cpp  test_log_level.cpp  test_utils.cpp
